adding index template

--- a/templates/shop.html
+++ b/templates/shop.html
@@ -1,14 +1,21 @@
+<!--A Design by W3layouts
+Author: W3layout
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
+<!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Free Adidas Website Template | Shop :: w3layouts</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link href="templates/css/style.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="templates/css/form.css" rel="stylesheet" type="text/css" media="all" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="templates/js/jquery.min.js"></script>
-    <script src="templates/js/jquery.easydropdown.js"></script>
-    <script type="text/javascript">
+<head>
+<title>Free Adidas Website Template | Shop :: w3layouts</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="css/form.css" rel="stylesheet" type="text/css" media="all" />
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script src="js/jquery.easydropdown.js"></script>
+<script type="text/javascript">
         $(document).ready(function() {
             $(".dropdown img.flag").addClass("flagvisibility");
 
@@ -40,11 +47,11 @@
         });
      </script>
 <!-- start menu -->     
-<link href="templates/css/megamenu.css" rel="stylesheet" type="text/css" media="all" />
-<script type="text/javascript" src="templates/js/megamenu.js"></script>
+<link href="css/megamenu.css" rel="stylesheet" type="text/css" media="all" />
+<script type="text/javascript" src="js/megamenu.js"></script>
 <script>$(document).ready(function(){$(".megamenu").megamenu();});</script>
 <!-- end menu -->
-<script type="text/javascript" src="templates/js/jquery.jscrollpane.min.js"></script>
+<script type="text/javascript" src="js/jquery.jscrollpane.min.js"></script>
 		<script type="text/javascript" id="sourcecode">
 			$(function()
 			{
@@ -52,8 +59,8 @@
 			});
 		</script>
 <!-- top scrolling -->
-<script type="text/javascript" src="templates/js/move-top.js"></script>
-<script type="text/javascript" src="templates/js/easing.js"></script>
+<script type="text/javascript" src="js/move-top.js"></script>
+<script type="text/javascript" src="js/easing.js"></script>
    <script type="text/javascript">
 		jQuery(document).ready(function($) {
 			$(".scroll").click(function(event){		
@@ -62,23 +69,12 @@
 			});
 		});
 	</script>		
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        <script src="node_modules/core-js/client/shim.min.js"></script>
-        <script src="node_modules/zone.js/dist/zone.js"></script>
-        <script src="node_modules/systemjs/dist/system.src.js"></script>
-        <script src="systemjs.config.js"></script>
-        <script>
-          System.import('app').catch(function(err){ console.error(err); });
-        </script>
-    </head>
+</head>
 <body>
-	<purchase-app></purchase-app>
   <div class="header-top">
 	 <div class="wrap"> 
 		<div class="logo">
-			<a href="index.html"><img src="templates/images/logo.png" alt=""/></a>
+			<a href="index.html"><img src="images/logo.png" alt=""/></a>
 	    </div>
 	    <div class="cssmenu">
 		   <ul>
@@ -753,9 +749,7 @@
      	    <div class="clear"></div>
 	       </div>
 			    <div class="box1">
-					<item>
-					</item>
-					<temp></temp>
+				   
 			    </div>
 			    <div class="box1">
 				 
