--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,19 @@
+<!--A Design by W3layouts
+Author: W3layout
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
+<!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Free Adidas Website Template | Shop :: w3layouts</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link href="templates/css/style.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="templates/css/form.css" rel="stylesheet" type="text/css" media="all" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <script type="text/javascript" src="templates/js/jquery.min.js"></script>
-    <script src="templates/js/jquery.easydropdown.js"></script>
-    <script type="text/javascript">
+<head>
+<title>Free Adidas Website Template | Login :: w3layouts</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript">
         $(document).ready(function() {
             $(".dropdown img.flag").addClass("flagvisibility");
 
@@ -40,20 +45,13 @@
         });
      </script>
 <!-- start menu -->     
-<link href="templates/css/megamenu.css" rel="stylesheet" type="text/css" media="all" />
-<script type="text/javascript" src="templates/js/megamenu.js"></script>
+<link href="css/megamenu.css" rel="stylesheet" type="text/css" media="all" />
+<script type="text/javascript" src="js/megamenu.js"></script>
 <script>$(document).ready(function(){$(".megamenu").megamenu();});</script>
 <!-- end menu -->
-<script type="text/javascript" src="templates/js/jquery.jscrollpane.min.js"></script>
-		<script type="text/javascript" id="sourcecode">
-			$(function()
-			{
-				$('.scroll-pane').jScrollPane();
-			});
-		</script>
 <!-- top scrolling -->
-<script type="text/javascript" src="templates/js/move-top.js"></script>
-<script type="text/javascript" src="templates/js/easing.js"></script>
+<script type="text/javascript" src="js/move-top.js"></script>
+<script type="text/javascript" src="js/easing.js"></script>
    <script type="text/javascript">
 		jQuery(document).ready(function($) {
 			$(".scroll").click(function(event){		
@@ -61,24 +59,13 @@
 				$('html,body').animate({scrollTop:$(this.hash).offset().top},1200);
 			});
 		});
-	</script>		
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        <script src="node_modules/core-js/client/shim.min.js"></script>
-        <script src="node_modules/zone.js/dist/zone.js"></script>
-        <script src="node_modules/systemjs/dist/system.src.js"></script>
-        <script src="systemjs.config.js"></script>
-        <script>
-          System.import('app').catch(function(err){ console.error(err); });
-        </script>
-    </head>
+	</script>
+</head>
 <body>
-	<purchase-app></purchase-app>
   <div class="header-top">
 	 <div class="wrap"> 
 		<div class="logo">
-			<a href="index.html"><img src="templates/images/logo.png" alt=""/></a>
+			<a href="index.html"><img src="images/logo.png" alt=""/></a>
 	    </div>
 	    <div class="cssmenu">
 		   <ul>
@@ -100,9 +87,9 @@
  	</div>
    </div>
    <div class="header-bottom">
-   	<div class="wrap">
+   	  <div class="wrap">
    		<!-- start header menu -->
-		<ul class="megamenu skyblue">
+		 <ul class="megamenu skyblue">
 		    <li><a class="color1" href="#">Home</a></li>
 			<li class="grid"><a class="color2" href="#">Men</a>
 				<div class="megapanel">
@@ -615,163 +602,46 @@
      	</div>
        </div>
        <div class="login">
-         <div class="wrap">
-     	    <div class="rsidebar span_1_of_left">
-				   <section  class="sky-form">
-                   	  <h4>Occasion</h4>
-						<div class="row row1 scroll-pane">
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>Athletic (20)</label>
-							</div>
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Athletic Shoes (48)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Casual (45)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Casual (45)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Other (1)</label>
-						    </div>
-						 </div>
-                   	  <h4>Category</h4>
-						<div class="row row1 scroll-pane">
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>Flats (70)</label>
-							</div>
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Athletic Shoes (48)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Athletic Shoes (48)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Heels (38)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Other (1)</label>
-						    </div>
-						</div>
-					 <h4>Styles</h4>
-						<div class="row row1 scroll-pane">
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>Athletic (20)</label>
-							</div>
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Ballerina (5)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Pumps (7)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>High Tops (2)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Other (1)</label>
-						    </div>
-						</div>
-				</section>
-		        <section  class="sky-form">
-					<h4>Brand</h4>
-						<div class="row row1 scroll-pane">
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>Adidas by Stella McCartney</label>
-							</div>
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Asics</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Bloch</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Bloch Kids</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Capezio</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox" ><i></i>Capezio Kids</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Nike</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Zumba</label>
-							</div>
-						</div>
-		       </section>
-		       <section  class="sky-form">
-					<h4>Heel Height</h4>
-						<div class="row row1 scroll-pane">
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>Flat (20)</label>
-							</div>
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Under 1in(5)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>1in - 1 3/4 in(5)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>2in - 2 3/4 in(3)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox" ><i></i>3in - 3 3/4 in(2)</label>
-							</div>
-						</div>
-		       </section>
-		       <section  class="sky-form">
-					<h4>Price</h4>
-						<div class="row row1 scroll-pane">
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>$50.00 and Under (30)</label>
-							</div>
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>$100.00 and Under (30)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>$200.00 and Under (30)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>$300.00 and Under (30)</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>$400.00 and Under (30)</label>
-							</div>
-						</div>
-		       </section>
-		       <section  class="sky-form">
-					<h4>Colors</h4>
-						<div class="row row1 scroll-pane">
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>Red</label>
-							</div>
-							<div class="col col-4">
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Green</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Black</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Yellow</label>
-								<label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Orange</label>
-							</div>
-						</div>
-		       </section>
-		</div>
-		<div class="cont span_2_of_3">
-		  <div class="mens-toolbar">
-              <div class="sort">
-               	<div class="sort-by">
-		            <label>Sort By</label>
-		            <select>
-		                            <option value="">
-		                    Popularity               </option>
-		                            <option value="">
-		                    Price : High to Low               </option>
-		                            <option value="">
-		                    Price : Low to High               </option>
-		            </select>
-		            <a href=""><img src="images/arrow2.gif" alt="" class="v-middle"></a>
-               </div>
-    		</div>
-	          <div class="pager">   
-	           <div class="limiter visible-desktop">
-	            <label>Show</label>
-	            <select>
-	                            <option value="" selected="selected">
-	                    9                </option>
-	                            <option value="">
-	                    15                </option>
-	                            <option value="">
-	                    30                </option>
-	                        </select> per page        
-	             </div>
-	       		<ul class="dc_pagination dc_paginationA dc_paginationA06">
-				    <li><a href="#" class="previous">Pages</a></li>
-				    <li><a href="#">1</a></li>
-				    <li><a href="#">2</a></li>
-			  	</ul>
-		   		<div class="clear"></div>
-	    	</div>
-     	    <div class="clear"></div>
-	       </div>
-			    <div class="box1">
-					<item>
-					</item>
-					<temp></temp>
-			    </div>
-			    <div class="box1">
-				 
-			    </div>
-			    <div class="box1">
-				
-			    </div>
-			    <div class="box1">
-
-			    </div>
-			  </div>
-			  <div class="clear"></div>
+          <div class="wrap">
+				<div class="col_1_of_login span_1_of_login">
+					<h4 class="title">New Customers</h4>
+					<h5 class="sub_title">Register Account</h5>
+					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan</p>
+					<div class="button1">
+					   <a href="register.html"><input type="submit" name="Submit" value="Continue"></a>
+					 </div>
+					 <div class="clear"></div>
+				</div>
+				<div class="col_1_of_login span_1_of_login">
+				  <div class="login-title">
+	           		<h4 class="title">Registered Customers</h4>
+					 <div class="comments-area">
+						<form>
+							<p>
+								<label>Name</label>
+								<span>*</span>
+								<input type="text" value="">
+							</p>
+							<p>
+								<label>Password</label>
+								<span>*</span>
+								<input type="password" value="">
+							</p>
+							 <p id="login-form-remember">
+								<label><a href="#">Forget Your Password ? </a></label>
+							 </p>
+							 <p>
+								<input type="submit" value="Login">
+							</p>
+						</form>
+					</div>
+			      </div>
+				</div>
+				<div class="clear"></div>
 			</div>
-		   </div>
-	     <div class="footer">
-       	   <div class="footer-top">
+		</div>
+        <div class="footer">
+       	  <div class="footer-top">
        		<div class="wrap">
        			   <div class="col_1_of_footer-top span_1_of_footer-top">
 				  	 <ul class="f_list">
@@ -790,9 +660,9 @@
 				   </div>
 				  <div class="clear"></div>
 			 </div>
-       	    </div>
-       	    <div class="footer-middle">
-       	 	  <div class="wrap">
+       	 </div>
+       	 <div class="footer-middle">
+       	 	<div class="wrap">
        	 		<div class="section group">
 				<div class="col_1_of_middle span_1_of_middle">
 					<dl id="sample" class="dropdown">
@@ -824,7 +694,7 @@
 			   </div>
        	 	</div>
        	 </div>
-       	 <div class="footer-bottom">
+       	<div class="footer-bottom">
        	 	<div class="wrap">
        	 		<div class="section group">
 				<div class="col_1_of_5 span_1_of_5">
@@ -979,9 +849,9 @@
 				</div>
 				<div class="clear"></div>
 			</div>
-       	  </div>
+       	 	</div>
        	 </div>
-       	 <div class="copy">
+       	<div class="copy">
        	   <div class="wrap">
        	   	  <p>© All rights reserved | Template by&nbsp;<a href="http://w3layouts.com/"> W3Layouts</a></p>
        	   </div>
